--- a/css/estilos.css
+++ b/css/estilos.css
@@ -232,21 +232,21 @@ body {
 @media screen and (-webkit-device-pixel-ratio: 1.5) {
   #pruebacss{display:none;}
 	/*PAGE LOGIN*/
-	#email{font-size:16px;}
-	#pass{font-size:16px;}
-	#logoBig{width:250px}
-	#login{font-size:18px;height:40px;width:100px;margin-left:auto;margin-right:auto;margin-bottom:30px;background-color:#034a80 !important;color:#fff;border:none;text-shadow:none;}
-	.registrobtn{width:75px;background-color:#f4f5f5 !important;padding-top:5px;padding-bottom:5px;border:none;text-shadow:none;color:#333;margin-bottom:20px;margin-left:auto;margin-right:auto;}
-	#fconnect{margin-bottom:5px;}
-	#pageadmin #centro{width: 80%; text-align:center;}
+	#email{font-size:18px;}
+	#pass{font-size:18px;}
+	#logoBig{width:500px}
+	#login{font-size:30px;margin-bottom:20px;background-color:#034a80 !important;color:#fff;border:none;text-shadow:none;}
+	.registrobtn{font-size:24px; width:70%;background-color:#f4f5f5 !important;padding-top:5px;padding-bottom:5px;border:none;text-shadow:none;color:#333;margin-bottom:10px;margin-left:auto;margin-right:auto;}
+	#fconnect{margin-bottom:20px;}
+	#pageadmin #centro{width: 300px; text-align:center;}
 
 	/*PAGE REGISTRO*/
-	#pageregistrarse form{width:500px !important;margin-left:auto;margin-right:auto;}
+	#pageregistrarse form{width:90%;margin-left:auto;margin-right:auto;}
 	#pageregistrarse input{font-size:18px;}
 	#pageregistrarse p{font-size:18px;text-align:left;font-weight:bold;}
 	#pageregistrarse label {font-size:18px;text-align:left;margin-top:10px;}
-	#pageregistrarse #registrar{position:relative;width:300px;margin-left:auto;margin-right:auto;margin-bottom:30px;background-color:#034a80 !important;color:#fff;border:none;text-shadow:none;}
-	#pageregistrarse #registrar i{position:absolute;font-size: 24px;top:8px;left:10px;font-weight:bold;}
+	#pageregistrarse #registrar{font-size:48px;position:relative;width:280px;margin-left:auto;margin-right:auto;margin-bottom:30px;background-color:#034a80 !important;color:#fff;border:none;text-shadow:none;}
+	#pageregistrarse #registrar i{position:absolute;font-size: 48px;top:8px;left:10px;font-weight:bold;}
 	.volver i{font-size:24px;}
 
 	/*PAGE MENUPRINCIPAL*/
@@ -257,7 +257,7 @@ body {
 	.ui-bar-a{background:none !important;border:none !important;margin-bottom:20px;}
 	.actualizar{width:80%;margin-right: auto;margin-left: auto}
 	.ui-header{padding-top:10px !important;}
-	.ui-title{width:250px;background-image:url(../imagenes/logochicox2.png);background-size: 50% 50%;height:40px;background-repeat: no-repeat;margin:0px auto !important;}
+	.ui-title{width:500px;background-image:url(../imagenes/logochicox2.png);height:40px;background-repeat: no-repeat;margin:0px auto !important;}
 	#bienvenido{font-size:18px;padding:4px;margin:10px; margin-top:10px;color:#fff;background-color:#ccc;border-radius:5px;}
 	.salir{top:25px;right:25px;display:block;}
 	.salir span,.options span{font-size:24px;}
