--- a/css/estilos.css
+++ b/css/estilos.css
@@ -180,10 +180,11 @@ body {
 	#tiempo span{display:inline-block;vertical-align: middle;}
 	#tiempo{background:#ccc;font-size:20px;color:#fff;padding:5px;border-radius: 4px;width:200px;margin:0px auto 0px auto;float:right;}
 	#respuestas{width:600px;margin:60px auto 0px auto;}
-	#respuestas legend{margin:30px;font-size:24px;padding-bottom:30 !important;}
+	#respuestas legend{margin:30px;font-size:20px;}
 	.ui-controlgroup-vertical .ui-controlgroup-controls .ui-btn{border-bottom-width:1px !important}
 	#respuestas .ui-radio{margin-bottom:20px;border-radius:10px !important;}
 	#respuestas .ui-radio label{font-weight:normal !important;}
+	#pageexamen .ui-listview{margin-top:30px !important;}
 	/*.ui-page-theme-a .ui-btn{}*/
 	.nextBtn{width:195px;background:#0a4b81 !important;color:#fff !important;text-shadow:none !important;font-size:20px !important;padding:5px !important;float:right !important;}
 	.nextBtn i{font-size:42px;color:#fff;vertical-align: middle;}
